vengi (0.0.7.0-1) UNRELEASED; urgency=low

  * General:
  * Fixed wrong-name-for-symlinks shown
  * Added support for writing qef files
  * Added lua script interface to generate voxels
  * Added stacktrace support for windows
  * Refactored module structure (split app and core)
  * Optimized character animations
  * Added quaternion lua support
  * Updated external dependencies
  * Refactored lua bindings

  * VoxEdit:
  * Converted some voxel generation functions to lua
  * Implemented new voxel generator scripts

 -- Martin Gerhardy <martin.gerhardy@gmail.com>  Sun, 2 Aug 2020 10:59:07 +0200

vengi (0.0.6.0-1) unstable; urgency=low

  * General:
  * Fixed gamma cvar usage
  * Enable vsync by default
  * Updated external dependencies
  * Activated OpenCL in a few tools
  * Added symlink support to virtual filesystem

  * VoxEdit:
  * Fixed loading palette lua script with material definitions
  * Fixed error in resetting mirror axis
  * Fixed noise generation
  * Reduced palette widget size
  * Fixed palette widget being invisible on some dpi scales

 -- Martin Gerhardy <martin.gerhardy@gmail.com>  Sun, 2 Aug 2020 10:59:07 +0200

vengi (0.0.5.0-1) unstable; urgency=low

  * Client:
  * Fixed movement

  * Server:
  * Fixed visibility check
  * Fixed segfault while removing npcs

  * VoxEdit:
  * Started to add scene mode edit support (move volumes)

  * VoxConvert:
  * Support different palette files (cvar `palette`)
  * Support writing outside the registered application paths
  * Allow to overwrite existing files

  * General:
  * Switched to qb as default volume format
  * Improved scene graph support for Magicavoxel vox files
  * Fixed invisible voxels for qb and qbt (Qubicle) volume format
  * Support automatic loading different volume formats for assets
  * Support Command&Conquer vxl files
  * Support Ace of Spades map files (vxl)
  * Support Qubicle exchange format (qef)
  * Perform mesh extraction in dedicated threads for simple volume rendering