@@ -17,11 +17,12 @@
 #include "KVXFormat.h"
 #include "KV6Format.h"
 #include "AoSVXLFormat.h"
+#include "voxelformat/CSMFormat.h"
 
 namespace voxelformat {
 
 // this is the list of supported voxel volume formats that are have importers implemented
-const char *SUPPORTED_VOXEL_FORMATS_LOAD = "vox,qbt,qb,vxm,binvox,cub,kvx,kv6,vxl,qef";
+const char *SUPPORTED_VOXEL_FORMATS_LOAD = "vox,qbt,qb,vxm,binvox,cub,kvx,kv6,vxl,qef,csm";
 // this is the list of internal formats that are supported engine-wide (the format we save our own models in)
 const char *SUPPORTED_VOXEL_FORMATS_LOAD_LIST[] = { "qb", "vox", nullptr };
 // this is the list of supported voxel volume formats that have exporters implemented
@@ -86,6 +87,11 @@ bool loadVolumeFormat(const io::FilePtr& filePtr, voxel::VoxelVolumes& newVolume
 		}
 	} else if (ext == "vxl") {
 		voxel::AoSVXLFormat f;
+		if (!f.loadGroups(filePtr, newVolumes)) {
+			voxelformat::clearVolumes(newVolumes);
+		}
+	} else if (ext == "csm" || magic == FourCC('.','C','S','M')) {
+		voxel::CSMFormat f;
 		if (!f.loadGroups(filePtr, newVolumes)) {
 			voxelformat::clearVolumes(newVolumes);
 		}
