@@ -13,6 +13,7 @@ class CubFormatTest: public AbstractVoxFormatTest {
 TEST_F(CubFormatTest, testLoad) {
 	CubFormat f;
 	std::unique_ptr<RawVolume> volume(load("cw.cub", f));
+	ASSERT_NE(nullptr, volume) << "Could not load volume";
 }
 
 }
