@@ -13,6 +13,7 @@ class KV6FormatTest: public AbstractVoxFormatTest {
 TEST_F(KV6FormatTest, testLoad) {
 	KV6Format f;
 	std::unique_ptr<RawVolume> volume(load("test.kv6", f));
+	ASSERT_NE(nullptr, volume) << "Could not load volume";
 }
 
 }
