@@ -7,9 +7,11 @@ vengi (0.0.7.0-1) UNRELEASED; urgency=low
   * Added stacktrace support for windows
   * Refactored module structure (split app and core)
   * Optimized character animations
+  * Hot reload character animation C++ source changes in debug builds
   * Added quaternion lua support
   * Updated external dependencies
   * Refactored lua bindings
+  * Support Chronovox-Studio files (csm)
 
   * VoxEdit:
   * Converted some voxel generation functions to lua
